Fix border missing when expanded; fix ratings cell alignment

--- a/src/app/courses/courses.scss
+++ b/src/app/courses/courses.scss
@@ -34,6 +34,8 @@ $label-height: 1rem;
   .mat-column-rating {
     max-width: 145px;
     padding: 0;
+    display: flex;
+    align-items: start;
   }
 }
 
