--- a/src/app/resources/resources.scss
+++ b/src/app/resources/resources.scss
@@ -28,6 +28,8 @@ $label-height: 1rem;
   .mat-column-rating {
     max-width: 145px;
     padding: 0;
+    display: flex;
+    align-items: start;
   }
   .mat-column-info {
     max-width: 200px;
